# campfirev1

./: package-lock.json  package.json  tailwind.config.js
backend/: ._target  Cargo.toml  rustc-ice-2025-04-02T01_06_38-10595.txt  rustc-ice-2025-04-02T01_07_07-10677.txt
backend/assets/tracks/PatrickAmunson/: ._Fireye - Escape the City at Night.m4a  ._Patrick Amunson - Jonny Depp Summer.m4a  ._Patrick Amunson - Like You Mean It.m4a  ._Patrick Amunson - Peaches & Cream.m4a  ._Patrick Amunson - The Rush.m4a  Patrick Amunson - Like You Mean It.m4a  Patrick Amunson - Peaches & Cream.m4a  Patrick Amunson - The Rush.m4a
backend/assets/tracks/SYM1/: ._Right 1 4 Me Master 2 [2024-03-06 195528].m4a
backend/src/: main.rs
backend/src/models/: mod.rs
backend/src/routes/: artists.rs  communities.rs  mod.rs  tracks.rs
backend/src/services/: mod.rs  track_service.rs
public/: index.html
public/assets/tracks/KiyanSaifi/: ._Live at Rhizome.m4a
public/assets/tracks/PatrickAmunson/: ._Fireye - Escape the City at Night.m4a  ._Patrick Amunson - Jonny Depp Summer.m4a  ._Patrick Amunson - Like You Mean It.m4a  ._Patrick Amunson - Peaches & Cream.m4a  (+3 more)
src/: App.css  App.tsx  fonts.css  index.css  index.tsx
src/components/: Header.tsx  MobileSidebar.tsx  Player.tsx  Sidebar.tsx
src/context/: PlaybackContext.tsx  UserContext.tsx
src/pages/: ArtistProfile.tsx  Artists.tsx  Home.tsx  MusicMap.tsx  Playlist.tsx  PlaylistBuilder.tsx  RoyaltiesDashboard.tsx  Search.tsx  Settings.tsx
src/services/: data.ts
src/types/: react-simple-maps.d.ts
src/utils/: icons.tsx
(+2 files in other folders)
