[package]
name = "campfire-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
dotenv = "0.15"
walkdir = "2.3"
thiserror = "1.0"
